# LiveTelemetry

./: .gitignore  README.md
FPGA/: Combined.dbc  Convert_CAN_Message_Test_List.py  DBC_to_LUT.py  Golden_dict.json  final_output.txt  insert_names.py  lut_entries.h  msg_lut.coe  name_value_dict.json  signal_def_mem.coe  signal_names.coe  signal_names.txt  test.py
FPGA/CAN_Decoder_Hardware/CAN_decoder/CAN_decoder/hls/.autopilot/db/driver/src/: CMakeLists.txt  xdecode_can_message.c  xdecode_can_message_linux.c  xdecode_can_message_sinit.c
Li.Tel VTM V1 Rev2 Hardware/: CAMtastic1.Cam  Li.Tel VTM V1 Rev2 PCB.html  Li.Tel VTM V1 Rev2 PCB.txt  Li.Tel VTM V1 Rev2.OutJob  Li.Tel VTM V1 Rev2.PrjPcb  Li.Tel VTM V1 Rev2.PrjPcbStructure  Microprocessor and CAN.SchDoc  Power Schematic.SchDoc
Node Red Backups/: 02_21_2025_Including_Legacy.json  1:11:2-24 General Page Made.json  1:9:2023 Node Red Backup.json  1_11_2024 General Page Made.json  1_22_2024  Reorganized Pages.json  1_22_2024 MC Page Made.json  1_9_2024 Routine Backup.json  2_14_2024 Routine Backup.json  2_26_2024 Color Change Backup.json  2_28_2024 Past Data View Created.json  3_24_2024 Routine Backup.json  4_1_2024 Complete_Past_Data_View.json  5_10_2024 Warnings and Cooling.json  5_7_2024 Before EV Changes.json  5_7_2024 Initial EV Changes.json
Server/: 2test.txt  CAN_Translate.py  Car_Packet_Simulator  Car_Packet_Simulator.py  Client_Simulator.py  Command Prompt - python3  main.py.txt  Create_json.py  Start_Node_Red.py  UDP_Client_TestCode.py  UDP_Server.py  finaljson.txt  forjson.txt  json_data.json  output.txt  (+2 more)
(+603 files in other folders)
